# bee2

./: .travis.yml  update_version.sh
apps/: CMakeLists.txt
apps/bshell/: CMakeLists.txt  bshell.c  constants.h  demo.sh
apps/bshell/commands/: bpace_alice_second.h  bpace_alice_start.h  bpace_bob_second.h  bpace_bob_start.h  command.h  help.h
apps/bshell/commands/commandsImpl/: bpace_alice_second.c  bpace_alice_start.c  bpace_bob_second.c  bpace_bob_start.c  command.c  help.c
apps/bshell/utils/: bpace_util.h  file_util.h  string_util.h
apps/bshell/utils/utilsImpl/: bpace_util.c  file_util.c  string_util.c
debian/: README  README.Debian  README.source  bee2.cron.d.ex  bee2.doc-base.EX  changelog  control  copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex
include/bee2/crypto/: bake.h
src/crypto/: bake.c
